# context-compressor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  HOW_TO_USE.md  LICENSE  MANIFEST.in  PUBLISH_NOW.md  PYPI_DESCRIPTION.md  PYPI_PUBLISHING_GUIDE.md  README.md  SUMMARY.md  UPLOAD_TO_PYPI.md  pyproject.toml  requirements.txt
examples/: README.md  advanced_usage.py  api_client.py  basic_usage.py  batch_processing.py  custom_strategy.py  integration_examples.py  production_example.py  quality_evaluation.py
src/context_compressor/: __init__.py  cli.py
src/context_compressor/api/: main.py
src/context_compressor/core/: compressor.py  models.py  quality_evaluator.py  strategy_manager.py
src/context_compressor/integrations/: __init__.py  langchain.py  openai.py
src/context_compressor/strategies/: __init__.py  base.py  extractive.py
src/context_compressor/utils/: __init__.py  cache.py  tokenizers.py
tests/: __init__.py  test_api.py  test_core.py  test_integrations.py  test_utils.py
